# submission-helper-action

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  submission_helper.py  submission_validator.py  test.sh  tests.py
.github/workflows/: ci.yml
